@@ -2526,10 +2526,9 @@ to find out how to use this."
 	      (buffer-disable-undo)
 	      (erase-buffer)
 	      ;; Avoid copying text props.
-	      (insert (format
-		       "%s" (save-excursion
-			      (set-buffer messbuf)
-			      (buffer-string))))
+	      (insert (with-current-buffer messbuf
+			(buffer-substring-no-properties 
+			 (point-min) (point-max))))
 	      (message-encode-message-body)
 	      ;; Remove some headers.
 	      (save-restriction
