@@ -5,6 +5,7 @@
 2000-11-22 ShengHuo ZHU  <zsh@cs.rochester.edu>
 
 	* message.el (message-send-mail): Use buffer-substring-no-properties.
+	(message-send-news): Ditto.
 
 2000-11-21  Stefan Monnier  <monnier@cs.yale.edu>
 
